# advent-of-code

./: Cargo.toml
aoc-2020/: Cargo.toml
aoc-2020/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day7.rs  day8.rs  lib.rs  main.rs
aoc-2021/: Cargo.toml
aoc-2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
aoc-utils/: Cargo.toml
aoc-utils/src/: grids.rs  lib.rs  parse.rs  structs.rs
