[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Jakub Dąbek <jakub.dabek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "^0.9"
once_cell = "^1.5"
regex = "^1.4"


aoc-runner = "^0.3"
aoc-runner-derive = "^0.3"
aoc-utils = { path = '../aoc-utils' }
