[package]
name = "aoc-utils"
version = "0.1.0"
authors = ["Jakub Dąbek <jakub.dabek@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lexical = { version = "6.0", features = ["power-of-two"] }
itertools = "0.9"
once_cell = "1.5"
regex = "1.4"
rustc-hash = "1.1"
bitvec = "1.0.0-rc1"
hex = "0.4.3"


[dependencies.aoc-runner]
version = "0.3.1"
path = "../../cargo-aoc/aoc-runner"

[dependencies.aoc-runner-derive]
version = "0.3.1"
path = "../../cargo-aoc/aoc-runner-derive"
